--- a/web/styles.css
+++ b/web/styles.css
@@ -1,5 +1,20 @@
+html {
+  background-color: #eee;
+}
+#canvas {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border: 1px solid #ccc;
+}
 .tile {
   display: inline-block;
   position: absolute;
   opacity: .6;
+}
+
+.controls {
+  position: fixed;
+  bottom: 10px;
 }
