--- a/web/styles.css
+++ b/web/styles.css
@@ -21,51 +21,69 @@ body {
 
 #controls {
   position: fixed;
+  display: grid;
+  grid-template-columns: 1fr 3fr 1fr 1fr;
+  grid-gap: 0px;
+  grid-auto-rows: auto;
   bottom: 0px;
   left: 50px;
   right: 50px;
-  border: 3px solid #555;
-  border-bottom: 0px;
-  background-color: #717171;
+  background-color: #4c4c4c;
   color: #333;
-  border-top-left-radius: 6px;
-  border-top-right-radius: 6px;
-  padding: 4px;
+  border-top-left-radius: 4px;
+  border-top-right-radius: 4px;
   transition: bottom .4s ease 0s;
 }
 #controls.closed {
   bottom: -97px;
 }
+#controls > div {
+  display: flex;
+  flex-flow: column;
+  border: 3px solid #4c4c4c;
+  border-bottom-width: 0px;
+  border-right-width: 0px;
+  padding: 4px;
+  background-color: #717171;
+  border-top-left-radius: 4px;
+  border-top-right-radius: 4px;
+}
+#controls > div:last-child { border-right-width: 3px }
 
-#mode { margin-bottom: 5px; }
-#mode div {
-  display: inline-block;
-  cursor: pointer;
-  background-color: #b1b4b7;
-  padding: 1px 35px;
-  margin-right: 3px;
+.controlHeader {
+  padding: 2px 5px;
   border-radius: 1px;
+  margin-bottom: 5px;
 }
-#mode.spin div:nth-child(1),
-#mode.pattern div:nth-child(2),
-#mode.orbit div:nth-child(3) {
-  background-color: #bee0f1;
-}
-
-#modeControls {
-  display: inline-block;
+#color .controlHeader { background-color: #b6d4c6; }
+#playback .controlHeader { background-color: #e4d0d7; }
+#msgHeader { background-color: #e8e1c8; }
+.controlPanel {
   background-color: #a5a5a5;
   border-radius: 1px;
   padding: 5px;
-  height: 50px;
-  width: 70%;
+  flex: 1 1 auto;
 }
+#modeTabs { display: flex; flex-flow: row; }
+#modeTabs div {
+  background-color: #b1b4b7;
+  cursor: pointer;
+  margin-right: 5px;
+  text-align: center;
+  flex: 1 1 auto;
+}
+#modeTabs div:last-child { margin-right: 0; }
 
+#mode.spin #modeTabs div:nth-child(1),
+#mode.pattern #modeTabs div:nth-child(2),
+#mode.orbit #modeTabs div:nth-child(3) {
+  background-color: #bee0f1;
+}
 #modeControls div {
   display: none;
 }
-#mode.spin + #modeControls div:nth-child(1),
-#mode.pattern + #modeControls div:nth-child(2),
-#mode.orbit + #modeControls div:nth-child(3) {
+#mode.spin #modeControls div:nth-child(1),
+#mode.pattern #modeControls div:nth-child(2),
+#mode.orbit #modeControls div:nth-child(3) {
   display: block;
 }
