--- a/web/styles.css
+++ b/web/styles.css
@@ -43,7 +43,7 @@ body {
   border: 3px solid #4c4c4c;
   border-bottom-width: 0px;
   border-right-width: 0px;
-  padding: 4px;
+  padding: 6px;
   background-color: #717171;
   border-top-left-radius: 4px;
   border-top-right-radius: 4px;
@@ -55,9 +55,10 @@ body {
   border-radius: 1px;
   margin-bottom: 5px;
 }
-#color .controlHeader { background-color: #b6d4c6; }
-#playback .controlHeader { background-color: #e4d0d7; }
-#msgHeader { background-color: #e8e1c8; }
+#color input[type="range"] { width: 44px; }
+#color .controlHeader { background-color: #d7e4dd; }
+#playback .controlHeader { background-color: #e6dbe0; }
+#msgHeader { background-color: #ece9dd; }
 .controlPanel {
   background-color: #a5a5a5;
   border-radius: 1px;
@@ -87,3 +88,21 @@ body {
 #mode.orbit #modeControls div:nth-child(3) {
   display: block;
 }
+
+
+input[type="color"] {
+	-webkit-appearance: none;
+	border: none;
+  background: none;
+  height: 20px;
+  width: 30px;
+}
+input[type="color"]::-webkit-color-swatch-wrapper {
+	padding: 0;
+}
+input[type="color"]::-webkit-color-swatch {
+	border: none;
+  border-radius: 3px;
+}
+
+:focus { outline: none; }
