--- a/web/styles.css
+++ b/web/styles.css
@@ -23,58 +23,49 @@ body {
   position: fixed;
   display: grid;
   grid-template-columns: 1fr 3fr 1fr 1fr;
-  grid-gap: 0px;
+  grid-gap: 5px;
   grid-auto-rows: auto;
   bottom: 0px;
   left: 50px;
   right: 50px;
-  background-color: #4c4c4c;
   color: #333;
+  background-color: #333333aa;
+  padding: 3px;
+  margin-bottom: 3px;
   border-top-left-radius: 4px;
   border-top-right-radius: 4px;
   transition: bottom .4s ease 0s;
 }
 #controls.closed {
-  bottom: -97px;
+  bottom: -120px;
 }
 #controls > div {
   display: flex;
   flex-flow: column;
-  border: 3px solid #4c4c4c;
-  border-bottom-width: 0px;
-  border-right-width: 0px;
-  padding: 6px;
-  background-color: #717171;
+  padding: 5px;
+  background-color: #717171cc;
   border-top-left-radius: 4px;
   border-top-right-radius: 4px;
 }
-#controls > div:last-child { border-right-width: 3px }
 
 .controlHeader {
   padding: 2px 5px;
   border-radius: 1px;
-  margin-bottom: 5px;
-}
-#color input[type="range"] { width: 44px; }
-#color .controlHeader { background-color: #d7e4dd; }
-#playback .controlHeader { background-color: #e6dbe0; }
-#msgHeader { background-color: #ece9dd; }
-.controlPanel {
-  background-color: #a5a5a5;
-  border-radius: 1px;
-  padding: 5px;
-  flex: 1 1 auto;
+  margin-bottom: 3px;
 }
 #modeTabs { display: flex; flex-flow: row; }
 #modeTabs div {
   background-color: #b1b4b7;
   cursor: pointer;
-  margin-right: 5px;
+  margin-right: 3px;
   text-align: center;
   flex: 1 1 auto;
 }
 #modeTabs div:last-child { margin-right: 0; }
 
+#msgHeader { background-color: #ece9dd; }
+#color .controlHeader,
+#playback .controlHeader,
 #mode.spin #modeTabs div:nth-child(1),
 #mode.pattern #modeTabs div:nth-child(2),
 #mode.orbit #modeTabs div:nth-child(3) {
@@ -83,11 +74,19 @@ body {
 #modeControls div {
   display: none;
 }
+
+.controlPanel {
+  background-color: #a5a5a5;
+  border-radius: 1px;
+  padding: 5px;
+  flex: 1 1 auto;
+}
 #mode.spin #modeControls div:nth-child(1),
 #mode.pattern #modeControls div:nth-child(2),
 #mode.orbit #modeControls div:nth-child(3) {
   display: block;
 }
+#color input[type="range"] { width: 44px; }
 
 
 input[type="color"] {
