--- a/web/styles.css
+++ b/web/styles.css
@@ -3,7 +3,7 @@ html {
 }
 body {
   margin: 0;
-  font-family: sans-serif;
+  font-family: system-ui, sans-serif;
   font-size: .9em;
 }
 #canvas {
@@ -31,7 +31,6 @@ body {
   color: #333;
   background-color: #333333aa;
   padding: 3px;
-  margin-bottom: 3px;
   border-top-left-radius: 4px;
   border-top-right-radius: 4px;
   transition: bottom .4s ease 0s;
@@ -74,12 +73,29 @@ body {
 #modeControls div {
   display: none;
 }
+#playback .controlPanel div { display: inline-block; }
 
 .controlPanel {
   background-color: #a5a5a5;
   border-radius: 1px;
   padding: 5px;
   flex: 1 1 auto;
+}
+#pause {
+    width: 0;
+    height: 0;
+    border-top: 12px solid transparent;
+    border-left: 22px solid #000;
+    border-bottom: 12px solid transparent;
+    border-right: none;
+}
+#pause.false {
+    width: 6px;
+    height: 24px;
+    border-right: 8px solid #000;
+    border-left: 8px solid #000;
+    border-bottom: none;
+    border-top: none;
 }
 #mode.spin #modeControls div:nth-child(1),
 #mode.pattern #modeControls div:nth-child(2),
