--- a/web/styles.css
+++ b/web/styles.css
@@ -29,7 +29,7 @@ body {
   left: 50px;
   right: 50px;
   color: #333;
-  background-color: #333333aa;
+  background-color: #33333322;
   padding: 3px;
   margin-bottom: 5px;
   border-top-left-radius: 4px;
@@ -92,12 +92,14 @@ body {
 }
 #playback .controlPanel {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-gap: 3px;
   grid-auto-rows: auto;
   padding: 3px;
 }
-#speedControl { grid-column: 1 / 3; }
+#playing { grid-column: 1 / 3 }
+#rewind { grid-column: 3 / 5 }
+#speedControl { grid-column: 1 / 5; }
 
 .spinMode,
 .patternMode,
