--- a/web/styles.css
+++ b/web/styles.css
@@ -22,7 +22,7 @@ body {
 .controls {
   position: fixed;
   display: grid;
-  grid-template-columns: 1fr 3fr 1fr 1fr;
+  grid-template-columns: 190px 3fr 1fr 1fr;
   grid-gap: 5px;
   grid-auto-rows: auto;
   bottom: 0px;
@@ -30,11 +30,12 @@ body {
   right: 50px;
   color: #333;
   background-color: #33333322;
-  padding: 3px;
+  padding: 2px;
   margin-bottom: 5px;
   border-top-left-radius: 4px;
   border-top-right-radius: 4px;
   transition: bottom .4s ease 0s;
+  user-select: none;
 }
 .controls.closed {
   bottom: -120px;
@@ -80,7 +81,7 @@ body {
   display: inline-block;
   cursor: pointer;
   padding: 2px;
-  border: 1px solid #7b7b7b;
+  border: 1px solid #888;
   border-radius: 2px;
   text-align: center;
   user-select: none;
@@ -93,26 +94,27 @@ body {
 #playback .controlPanel {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
-  grid-gap: 3px;
+  grid-gap: 5px;
   grid-auto-rows: auto;
-  padding: 3px;
+  padding: 5px;
 }
 #playing { grid-column: 1 / 3 }
 #rewind { grid-column: 3 / 5 }
-#speedControl { grid-column: 1 / 5; }
+.speedControl { grid-column: 1 / 5; }
 
-.spinMode,
-.patternMode,
-.orbitMode {
-  display: none;
+#modeControls .controlPanel {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 5px;
+  grid-auto-rows: auto;
 }
-#mode[value="spin"] .spinMode,
-#mode[value="pattern"] .patternMode,
-#mode[value="orbit"] .orbitMode {
-  display: initial;
+#color .controlPanel {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  grid-gap: 5px;
+  grid-auto-rows: auto;
 }
-#color input[type="range"] { width: 44px; }
-
+#color .slider { grid-column: 1 / 6; }
 
 input[type="color"] {
 	-webkit-appearance: none;
@@ -129,4 +131,109 @@ input[type="color"]::-webkit-color-swatch {
   border-radius: 3px;
 }
 
+input[type=range] {
+  -webkit-appearance: none;
+  background: transparent;
+  margin-top: 13px;
+  min-width: 30px;
+}
+input[type=range]::-webkit-slider-runnable-track {
+  width: 100%;
+  height: 7px;
+  cursor: pointer;
+  background: #b8b8b8;
+  border: 1px solid #888;
+  border-radius: 2px;
+  padding: 2px;
+}
+input[type=range]::-ms-track {
+  width: 100%;
+  cursor: pointer;
+  background: transparent;
+  border-color: transparent;
+  color: transparent;
+  height: 7px;
+  cursor: pointer;
+  background: #b8b8b8;
+  border: 1px solid #888;
+  border-radius: 2px;
+  padding: 2px;
+}
+input[type=range]::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  height: 16px;
+  width: 16px;
+  border-radius: 2px;
+  background: #eaeaea;
+  border: 1px solid #888;
+  cursor: pointer;
+  margin-top: -15px;
+}
+input[type=range]::-moz-range-thumb {
+  height: 16px;
+  width: 16px;
+  border-radius: 2px;
+  background: #eaeaea;
+  border: 1px solid #888;
+  cursor: pointer;
+  margin-top: -15px;
+}
+input[type=range]::-ms-thumb {
+  height: 16px;
+  width: 16px;
+  border-radius: 2px;
+  background: #eaeaea;
+  border: 1px solid #888;
+  cursor: pointer;
+  margin-top: -15px;
+}
+#mode[value="spin"] .spinMode.slider,
+#mode[value="pattern"] .patternMode.slider,
+#mode[value="orbit"] .orbitMode.slider {
+  display: flex;
+}
+.slider {
+  display: flex;
+  flex-flow: row;
+}
+.slider label {
+  margin-right: -8px;
+  border: 1px solid #888;
+  border-radius: 2px;
+  flex-basis: 100px;
+}
+.slider label div {
+  text-align: center;
+  display: inline-block;
+  width: 65px;
+}
+.slider label span {
+  height: 19px;
+  width: 24px;
+  background-color: #c4c4c4;
+  color: #636363;
+  border-left: 1px solid #b4b4b4;
+  display: inline-block;
+  padding: 2px 6px 0px 4px;
+  text-align: center;
+}
+.slider input { flex: 1 1 auto; }
+
+.slider.speedControl label { flex-basis: 91px; }
+.slider.speedControl label div { width: 44px; }
+.slider.speedControl label span { padding: 2px 2px 0px 0px; }
+#color .slider label { flex-basis: 90px; }
+#color .slider label div { width: 50px; }
+
 :focus { outline: none; }
+
+.spinMode,
+.patternMode,
+.orbitMode {
+  display: none;
+}
+#mode[value="spin"] .spinMode,
+#mode[value="pattern"] .patternMode,
+#mode[value="orbit"] .orbitMode {
+  display: initial;
+}
