--- a/web/styles.css
+++ b/web/styles.css
@@ -79,6 +79,7 @@ body {
   font-size: .9em;
 }
 .button {
+  background-color: #d6d6d6;
   display: inline-block;
   cursor: pointer;
   padding: 2px;
@@ -94,22 +95,26 @@ body {
 }
 #playback .controlPanel {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-columns: repeat(4, 1fr);
   grid-gap: 5px;
   grid-auto-rows: auto;
   padding: 5px;
 }
 #playing { grid-column: 1 / 3 }
 #rewind { grid-column: 3 / 5 }
-.speedControl { grid-column: 1 / 5; }
+#playback .slider { grid-column: 1 / 5; }
 .positionControl { grid-column: 1 / 4; }
 
 #modeControls .controlPanel {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: repeat(8, 1fr);
   grid-gap: 5px;
   grid-auto-rows: auto;
 }
+#modeControls .slider.left { grid-column: 1 / 5; }
+#modeControls .slider.right { grid-column: 5 / 9; }
+#modeControls .slider.right.spinMode { grid-column: 5 / 8; }
+#modeControls .slider.right.spinMode label div { width: 53px; }
 #color .controlPanel {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
@@ -192,14 +197,6 @@ input[type=range]::-ms-thumb {
   cursor: pointer;
   margin-top: -15px;
 }
-#mode[value="spin"] .spinMode.slider,
-#mode[value="spin"] .spinMode.input,
-#mode[value="pattern"] .patternMode.slider,
-#mode[value="pattern"] .patternMode.input,
-#mode[value="orbit"] .orbitMode.slider,
-#mode[value="orbit"] .orbitMode.input {
-  display: flex;
-}
 .slider {
   display: flex;
   flex-flow: row;
@@ -229,9 +226,9 @@ input[type=range]::-ms-thumb {
 
 .slider.fourdig label span { width: 33px; }
 .slider.fourdig label div { width: 55px;}
-.slider.speedControl label { flex-basis: 93px; }
-.slider.speedControl label div { width: 44px; }
-.slider.speedControl label span { padding: 2px 3px 0px 0px; }
+#playback .slider label { flex-basis: 93px; }
+#playback .slider label div { width: 44px; }
+#playback .slider label span { padding: 2px 3px 0px 0px; }
 #color .slider label { flex-basis: 90px; }
 #color .slider label div { width: 50px; }
 
@@ -248,7 +245,7 @@ input[type="text"] {
   color: #636363;
 }
 input[type="text"]:focus {
-  background: #efefef;
+  background: #eaeaea;
 }
 .input {
   border: 1px solid #888;
@@ -271,4 +268,13 @@ input[type="text"]:focus {
 #mode[value="pattern"] .patternMode,
 #mode[value="orbit"] .orbitMode {
   display: initial;
+}
+
+#mode[value="spin"] .spinMode.slider,
+#mode[value="spin"] .spinMode.input,
+#mode[value="pattern"] .patternMode.slider,
+#mode[value="pattern"] .patternMode.input,
+#mode[value="orbit"] .orbitMode.slider,
+#mode[value="orbit"] .orbitMode.input {
+  display: flex;
 }
