--- a/styles.css
+++ b/styles.css
@@ -41,7 +41,7 @@ label {
   user-select: none;
 }
 .controls.closed {
-  bottom: -170px;
+  bottom: -180px;
 }
 .controls > div {
   display: flex;
@@ -86,7 +86,7 @@ label {
   font-size: .9em;
 }
 .button {
-  background-color: #c8c8c8;
+  background-color: #c4c4c4;
   display: inline-block;
   cursor: pointer;
   padding: 2px;
@@ -98,7 +98,7 @@ label {
 }
 .button.trans {
   border-radius: 12px;
-  background-color: #c0c0c0;
+    background-color: #c0c0c0;
 }
 .button:hover {
   background-color: #e8e8e5;
@@ -134,18 +134,20 @@ label {
 #modeControls .slider.right.spinMode label div { width: 53px; }
 #color .controlPanel {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  grid-template-columns: 1fr 50px 1fr 50px;
   grid-gap: 5px;
   grid-auto-rows: auto;
 }
-#color .slider { grid-column: 1 / 6; }
+#color .slider.right { grid-column: 3 / 5; }
+#color .slider.left { grid-column: 1 / 3; }
+#color .slider label div { width: 20px; }
 
 input[type="color"] {
 	-webkit-appearance: none;
 	border: none;
   background: none;
-  height: 17px;
-  width: 35px;
+  height: 20px;
+  width: 32px;
 }
 input[type="color"]::-webkit-color-swatch-wrapper {
 	padding: 0;
@@ -249,10 +251,9 @@ input[type=range]::-ms-thumb {
 .slider.fourdig label span { width: 33px; }
 .slider.fourdig label div { width: 55px;}
 #playback .slider label { flex-basis: 93px; }
-#playback .slider label div { width: 44px; }
+#playback .slider label div { width: 46px; }
 #playback .slider label span { padding: 2px 3px 0px 0px; }
 #color .slider label { flex-basis: 90px; }
-#color .slider label div { width: 50px; }
 
 
 input[type="text"] {
