--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,7 @@ label {
 .controls {
   position: fixed;
   display: grid;
-  grid-template-columns: 190px 2fr 1fr 100px 1fr;
+  grid-template-columns: 190px 2fr 1fr 100px 180px;
   grid-gap: 5px;
   grid-auto-rows: auto;
   bottom: 0px;
@@ -78,13 +78,6 @@ label {
   background-color: #e6e4d0;
 }
 
-.controlPanel {
-  background-color: #999;
-  border-radius: 1px;
-  padding: 5px;
-  flex: 1 1 auto;
-  font-size: .9em;
-}
 .button {
   background-color: #c4c4c4;
   display: inline-block;
@@ -110,37 +103,41 @@ label {
   color: #000;
 }
 
-#playback .controlPanel {
+.controlPanel {
+  background-color: #999;
+  border-radius: 1px;
+  padding: 5px;
+  flex: 1 1 auto;
+  font-size: .9em;
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
   grid-gap: 5px;
   grid-auto-rows: auto;
-  padding: 5px;
+}
+#playback .controlPanel {
+  grid-template-columns: repeat(4, 1fr);
 }
 #playing { grid-column: 1 / 3 }
 #rewind { grid-column: 3 / 5 }
 #playback .slider { grid-column: 1 / 5; }
 .positionControl { grid-column: 1 / 4; }
 
-#modeControls .controlPanel {
-  display: grid;
+#modes .controlPanel {
   grid-template-columns: repeat(8, 1fr);
-  grid-gap: 5px;
-  grid-auto-rows: auto;
 }
-#modeControls .slider.left { grid-column: 1 / 5; }
-#modeControls .slider.right { grid-column: 5 / 9; }
-#modeControls .slider.right.spinMode { grid-column: 5 / 8; }
-#modeControls .slider.right.spinMode label div { width: 48px; }
+#modes .slider.left { grid-column: 1 / 5; }
+#modes .slider.right { grid-column: 5 / 9; }
+#modes .slider.right.spinMode { grid-column: 5 / 8; }
+#modes .slider.right.spinMode label div { width: 48px; }
 #color .controlPanel {
-  display: grid;
   grid-template-columns: 1fr 50px 1fr 50px;
-  grid-gap: 5px;
-  grid-auto-rows: auto;
 }
 #color .slider.right { grid-column: 3 / 5; }
 #color .slider.left { grid-column: 1 / 3; }
 #color .slider label div { width: 20px; }
+#bgColor { width: 95% }
+#presets .controlPanel {
+  grid-template-columns: 1fr 1fr;
+}
 
 input[type="color"] {
 	-webkit-appearance: none;
@@ -254,7 +251,6 @@ input[type=range]::-ms-thumb {
 #playback .slider label { flex-basis: 93px; }
 #playback .slider label div { width: 46px; }
 #color .slider label { flex-basis: 90px; }
-
 
 input[type="text"] {
   width: 50px;
