--- a/styles-input.css
+++ b/styles-input.css
@@ -13,6 +13,11 @@
   border-radius: 12px;
   background-color: #c0c0c0;
 }
+.pulse { animation: 1s infinite alternate pulse }
+@keyframes pulse {
+  0% { background-color: #c0c0c0; }
+  100% { background-color: #d0d0d0; }
+}
 .button:hover {
   background-color: #e8e8e5;
   color: #000;
