--- a/styles-input.css
+++ b/styles-input.css
@@ -16,7 +16,7 @@
 .pulse { animation: 1s infinite alternate pulse }
 @keyframes pulse {
   0% { background-color: #c0c0c0; }
-  100% { background-color: #d0d0d0; }
+  100% { background-color: #d4d4d4; }
 }
 .button:hover {
   background-color: #e8e8e5;
@@ -61,7 +61,8 @@ input[type="color"] {
 	border: none;
   background: none;
   height: 20px;
-  width: 40%;
+  width: 47%;
+	padding: 0;
 }
 input[type="color"]::-webkit-color-swatch-wrapper {
 	padding: 0;
@@ -69,6 +70,11 @@ input[type="color"]::-webkit-color-swatch-wrapper {
 input[type="color"]::-webkit-color-swatch {
 	border: none;
   border-radius: 2px;
+}
+input[type="color"]::-moz-color-swatch {
+	border: none;
+  border-radius: 2px;
+	padding: 0;
 }
 
 /* slider */
@@ -81,6 +87,15 @@ input[type=range] {
 input[type=range]::-webkit-slider-runnable-track {
   width: 100%;
   height: 6px;
+  cursor: pointer;
+  background: #b4b4b4;
+  border: 1px solid #7a7a7a;
+  border-radius: 2px;
+  padding: 2px;
+}
+input[type=range]::-moz-range-track {
+  width: 100%;
+  height: 1px;
   cursor: pointer;
   background: #b4b4b4;
   border: 1px solid #7a7a7a;
@@ -119,13 +134,12 @@ input[type=range]:focus::-webkit-slider-thumb {
   border-color: #ccc;
 }
 input[type=range]::-moz-range-thumb {
-  height: 15px;
-  width: 15px;
+  height: 14px;
+  width: 14px;
   border-radius: 2px;
   background: #eaeaea;
   border: 1px solid #7a7a7a;
   cursor: pointer;
-  margin-top: -15px;
 }
 input[type=range]::-ms-thumb {
   height: 15px;
