--- a/styles.css
+++ b/styles.css
@@ -21,15 +21,12 @@ label {
   left: 50%;
   transform: translate(-50%, 0);
   display: grid;
-  grid-template-columns: 190px 512px 100px 250px;
+  grid-template-columns: 190px 518px 100px 250px;
   grid-gap: 4px;
   grid-auto-rows: auto;
   bottom: 0px;
   color: #333;
-  padding: 2px;
   margin-bottom: 5px;
-  border-top-left-radius: 4px;
-  border-top-right-radius: 4px;
   transition: bottom .4s ease 0s;
   user-select: none;
 }
@@ -41,8 +38,7 @@ label {
   flex-flow: column;
   padding: 2px;
   background-color: #5c5c5c;
-  border-top-left-radius: 4px;
-  border-top-right-radius: 4px;
+  border-radius: 3px;
 }
 
 .controlHeader {
@@ -87,7 +83,7 @@ label {
 #rewind { grid-column: 3 / 5 }
 #playback .slider { grid-column: 1 / 5; }
 #playback .slider label { flex-basis: 93px; }
-#playback .slider label div { width: 46px; }
+#playback .slider label div { width: 45px; }
 .positionControl { grid-column: 1 / 4; }
 #playback .button { padding-bottom: 3px; }
 
@@ -95,14 +91,14 @@ label {
 #modes .slider.left { grid-column: 1 / 5; }
 #modes .slider.right { grid-column: 5 / 9; }
 #modes .slider.right.spinMode { grid-column: 5 / 8; }
-#modes .slider.right.spinMode label div { width: 48px; }
+#modes .slider.right.spinMode label div { width: 42px; }
 
 #color .controlPanel { grid-template-columns: 1fr 50px 1fr 50px; }
 #color .slider.right { grid-column: 3 / 5; }
 #color .slider.left { grid-column: 1 / 3; }
 #color .slider label { flex-basis: 90px; }
 #color .slider label div { width: 20px; }
-#bgColor { width: 95% }
+#bgColor { width: 100% }
 #colorPresets { grid-column: 2 / 5; }
 #colorPresets div { width: 19px; }
 
