--- a/styles-input.css
+++ b/styles-input.css
@@ -88,6 +88,7 @@ input[type=range] {
 }
 
 input[type=range]::-webkit-slider-runnable-track {
+  margin-left: -8px;
   margin-top: 9px;
   width: 100%;
   height: 6px;
@@ -135,6 +136,9 @@ input[type=range]::-moz-range-thumb {
   cursor: pointer;
   margin-top: 15px;
 }
+input[type=range]::-moz-focus-outer {
+  border: 0;
+}
 
 input[type=range]::-ms-track {
   width: 100%;
@@ -163,7 +167,6 @@ input[type=range]::-ms-thumb {
   flex-flow: row;
 }
 .slider label {
-  margin-right: -8px;
   border: 1px solid #7a7a7a;
   border-radius: 2px;
   flex-basis: 90px;
