--- a/styles.css
+++ b/styles.css
@@ -46,6 +46,7 @@ label {
   border-radius: 1px;
   margin-bottom: 2px;
   background-color: #e6e4d0;
+  line-height: 17px;
 }
 #modeTabs { display: flex; flex-flow: row; }
 #modeTabs div {
@@ -82,7 +83,7 @@ label {
 #playing { grid-column: 1 / 3 }
 #rewind { grid-column: 3 / 5 }
 #playback .slider { grid-column: 1 / 5; }
-#playback .slider label { flex-basis: 93px; }
+#playback .slider label { flex-basis: 98px; }
 #playback .slider label div { width: 45px; }
 .positionControl { grid-column: 1 / 4; }
 
@@ -90,12 +91,13 @@ label {
 #modes .slider.left { grid-column: 1 / 5; }
 #modes .slider.right { grid-column: 5 / 9; }
 #modes .slider.right.spinMode { grid-column: 5 / 8; }
+#modes .slider.right.spinMode label { flex-basis: 84px; }
 #modes .slider.right.spinMode label div { width: 42px; }
 
 #color .controlPanel { grid-template-columns: 1fr 50px 1fr 50px; }
 #color .slider.right { grid-column: 3 / 5; }
 #color .slider.left { grid-column: 1 / 3; }
-#color .slider label { flex-basis: 90px; }
+#color .slider label { flex-basis: 102px; }
 #color .slider label div { width: 20px; }
 #bgColor { width: 100% }
 #colorPresets { grid-column: 2 / 5; }
@@ -122,4 +124,19 @@ label {
 #mode[value="orbit"] .orbitMode.slider,
 #mode[value="orbit"] .orbitMode.input {
   display: flex;
+}
+
+/* firefox-only hack */
+@-moz-document url-prefix() {
+  #color .slider input[type=range] {
+    flex-basis: 112px;
+    width: 16px;
+    margin-right: 3px;
+  }
+  #playback .slider input[type=range] {
+    flex-basis: 118px;
+    width: 14px;
+    margin-right: 3px;
+  }
+  #modes .slider.right.spinMode label { flex-basis: 90px; }
 }
