--- a/styles.css
+++ b/styles.css
@@ -56,7 +56,7 @@ label {
   margin-right: 2px;
   text-align: center;
   flex: 1 1 auto;
-  transition: background-color .1s ease 0s;
+  transition: background-color .2s ease 0s;
 }
 #modeTabs div:last-child { margin-right: 0; }
 #modeTabs div:hover {
@@ -109,10 +109,13 @@ label {
 .bubble {
   position: absolute;
   top: -45px;
+  opacity: 0;
+  transition: opacity .7s ease 0s;
 }
-.bubbleInner {
+.bubble.open { opacity: 1; }
+.bubbleText {
   border-radius: 20px;
-  padding: 8px;
+  padding: 8px 10px;
   background-color: #daf3ff;
   border: 2px solid #88d8ff;
 }
@@ -125,7 +128,6 @@ label {
   border-right: 8px solid transparent;
   border-top: 8px solid #79d3ff;
 }
-#playbackHelp { left: 6%; }
 #modeHelp { left: 31%; }
 #presetHelp { top: -63px; }
 #colorHelp { left: 18%; }
